Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-41774

Incorrect parsing of system CA certificates with OpenSSL

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • None
    • 5.4.0
    • Network: SSL
    • None
    • Mac OS X 10.9.5
      OpenSSL 1.0.1i 6 Aug 2014
      Latest qtbase from git: f5f300ba820f8e6a268790e76d5cdb084853a099
    • Ifa36b7ac5b4236bd2fb53b9d7fe53c5db3cb078c

    Description

      When loading root CA certificates QSslCertificatePrivate::certificatesFromDer() passes 0-size buffer to d2i_X509() which causes an error on OpenSSL 1.0.1i.

      Patch: https://codereview.qt-project.org/96394

      Attachments

        Activity

          People

            richmoore Richard Moore (qtnetwork)
            msiedlarek MikoĊ‚aj Siedlarek
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: